--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -10,7 +10,7 @@
   {%- if settings.favicon != blank -%}
     <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
   {%- endif -%}
-
+ffg
   {%- capture seo_title -%}
     {{ page_title }}
     {%- if current_tags -%}
